# Hybrid-Neural-Retrieval

./: .gitignore  Hybrid_Neural_Retrieval.ipynb  README.md  pyproject.toml  requirements.txt  run.sh
evaluation/: queries.json  relevance.json
evaluation/results/: mrr_latency.json  phase3.json  phase4_expansion.json  phase5_web.json
scripts/: BM25_benchmark.py  build_eval_dataset.py  build_lexical_index.py  build_training_pairs.py  eval_expansion.py  eval_mrr_latency.py  eval_web.py  generate_queries.py  ingest_documents.py  label_relevance.py  lexical_evals.py  run_eval.py  train_fusion.py
src/neural_search/: __init__.py  config.py
src/neural_search/api/: main.py  routes.py  schemas.py
src/neural_search/collections/: manager.py
src/neural_search/evaluation/: dataset.py  metrics.py  runner.py
src/neural_search/ingestion/: chunker.py  parser.py  pipeline.py
src/neural_search/retrieval/: deduplicator.py  dense.py  expander.py  hybrid.py  learned.py  reranker.py  sparse.py  web.py
src/neural_search/synthesis/: groq_client.py  prompt.py
src/ui/: app.py  config.py
src/ui/components/: collections.py  results.py  sidebar.py  upload.py
tests/: conftest.py  pytest.ini  test_api.py  test_chunker.py  test_groq_client.py  test_hybrid.py  test_ingestion_pipeline.py  test_learned.py  test_manager.py  test_metrics.py  test_parser.py  test_prompt.py  test_reranker.py
tests/integration/: conftest.py  test_api_e2e.py  test_collection_lifecycle.py  test_dense_retrieval.py  test_hybrid_rrf.py  test_ingestion_bm25.py  test_phase4_reranker.py
